--- a/client/siteace.css
+++ b/client/siteace.css
@@ -164,3 +164,10 @@
 	border-color: transparent;
 	border-radius: 10px;
 }
+.website-item{
+	border-radius: 10px;
+	border: 1px dotted lightgray;
+	margin: 10px;
+	padding: 10px 15px;
+	max-width: 80%;
+}
